change html file path

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
 />
 <link rel="stylesheet" href="https://use.typekit.net/byy1vzy.css">
-<link href="./public/styles.css" rel="stylesheet">
+<link href="./styles.css" rel="stylesheet">
 
 <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
