update nav list

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
                             <button class="rounded-full"><span>ABOUT US</span></button>
                         </li>
                         <li class="nav-list-item">
-                            <button class="rounded-full"><span>PROUDUCTS</span></button>
+                            <button class="rounded-full"><span>PRODUCTS</span></button>
                         </li>
                         <li class="nav-list-item">
                             <button class="rounded-full"><span>OUR PORTFOLIO</span></button>
