footer button styling

--- a/public/index.html
+++ b/public/index.html
@@ -219,14 +219,14 @@
                                 </div>
                                 <div class="block w-1/2 ">
                                     <div class="flex justify-between items-start mt-8 ml-20">
-                                        <button>About</button>
-                                        <button>Products</button>
-                                        <button>Our Portfolio</button>
-                                        <button>Careers</button>
-                                        <button>Contact Us</button>
+                                        <button class="footer-btn rounded-full p-4">About</button>
+                                        <button class="footer-btn rounded-full p-4">Products</button>
+                                        <button class="footer-btn rounded-full p-4">Our Portfolio</button>
+                                        <button class="footer-btn rounded-full p-4">Careers</button>
+                                        <button class="footer-btn rounded-full p-4">Contact Us</button>
                                     </div>
                                     <div class="flex justify-end items-end mt-10">
-                                        <div class="flex justify-between">
+                                        <div class="flex justify-between mb-8">
                                             <button><i class="fa-brands fa-linkedin mr-5"></i></button>
                                             <button><i class="fa-brands fa-facebook-f mr-5"></i></button>
                                             <button><i class="fa-brands fa-instagram mr-5"></i></button>
