--- a/public/index.html
+++ b/public/index.html
@@ -190,7 +190,7 @@
                     </div>
                     <div class="section-10 h-96 text-white  flex flex-row">
                         <div class="flex flex-col justify-center items-center w-full items-center p-28">
-                            <div class="flex flex-row border-b-2 border-white w-full">
+                            <div class="flex flex-row border-b-2 border-white w-full mt-8">
                                 <div class="block w-1/2">
                                     <p class="line text-teal-400 text-6xl">-</p>
                                     <h1 CLASS="text-4xl mb-8">Bring your Vision to Light</h1>
@@ -201,7 +201,7 @@
                                 </div>
                             </div>
                             <div class="w-full flex flex-row justify">
-                                <div class="w-1/2 flex justify-between items-start mt-8 mr-20">
+                                <div class="w-1/2 flex justify-between items-start mt-8 mr-20 mb-6">
                                     <div class="block">
                                         <p>Monday - Thursday</p>
                                         <p>8:00 - 5:00</p>
@@ -225,7 +225,7 @@
                                         <button class="footer-btn rounded-full p-4">Careers</button>
                                         <button class="footer-btn rounded-full p-4">Contact Us</button>
                                     </div>
-                                    <div class="flex justify-end items-end mt-10">
+                                    <div class="flex justify-end items-end mt-2">
                                         <div class="flex justify-between mb-8">
                                             <button><i class="fa-brands fa-linkedin mr-5"></i></button>
                                             <button><i class="fa-brands fa-facebook-f mr-5"></i></button>
