--- a/public/index.html
+++ b/public/index.html
@@ -180,11 +180,11 @@
                             <img class="scale-75 "src="./assets/images/lounge-png.avif" alt="lounge">
                         </div>
                     </div>
-                    <div class="section-9 h-96 flex items-center justify-center">
+                    <div id="section-9"class="section-9 h-96 flex items-center justify-center">
                         <DIV class="block">
                             <p class="section-9-p text-white text-4xl mb-8">See Innovation in Person</p>
                             <div class="flex justify-center">
-                                <button class="section-9-btn text-white border-white border px-4 py-1 rounded ">THE EXPERIENCE CENTER</button>
+                                <button id="section-9-btn"class="section-9-btn text-white border-white border px-4 py-1 rounded ">THE EXPERIENCE CENTER</button>
                             </div>
                         </DIV>
                     </div>
@@ -259,7 +259,7 @@
     $('.materialboxed').materialbox();
   });
     </script>
-    <script src="../index.js"></script>
+    <script src="./index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/f62a5baa39.js" crossorigin="anonymous"></script>
