light flicker function

--- a/public/index.html
+++ b/public/index.html
@@ -181,6 +181,10 @@
                         </div>
                     </div>
                     <div id="section-9"class="section-9 h-96 flex items-center justify-center">
+                        <!-- <div id="fade_out">
+                            <img class="bottom" src="./assets/images/glow-light-1.jpg" />
+                            <img class="top" src="./assets/images/light-bulb.jpg" />
+                          </div> -->
                         <DIV class="block">
                             <p class="section-9-p text-white text-4xl mb-8">See Innovation in Person</p>
                             <div class="flex justify-center">
