--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <button class="rounded-full"><span>ABOUT US</span></button>
                         </li>
                         <li class="nav-list-item">
-                            <button class="rounded-full"><span>PROUDUCTS</span></button>
+                            <button class="rounded-full"><span>PRODUCTS</span></button>
                         </li>
                         <li class="nav-list-item">
                             <button class="rounded-full"><span>OUR PORTFOLIO</span></button>
@@ -180,17 +180,21 @@
                             <img class="scale-75 "src="./assets/images/lounge-png.avif" alt="lounge">
                         </div>
                     </div>
-                    <div class="section-9 h-96 flex items-center justify-center">
+                    <div id="section-9"class="section-9 h-96 flex items-center justify-center">
+                        <!-- <div id="fade_out">
+                            <img class="bottom" src="./assets/images/glow-light-1.jpg" />
+                            <img class="top" src="./assets/images/light-bulb.jpg" />
+                          </div> -->
                         <DIV class="block">
                             <p class="section-9-p text-white text-4xl mb-8">See Innovation in Person</p>
                             <div class="flex justify-center">
-                                <button class="section-9-btn text-white border-white border px-4 py-1 rounded ">THE EXPERIENCE CENTER</button>
+                                <button id="section-9-btn"class="section-9-btn text-white border-white border px-4 py-1 rounded ">THE EXPERIENCE CENTER</button>
                             </div>
                         </DIV>
                     </div>
                     <div class="section-10 h-96 text-white  flex flex-row">
                         <div class="flex flex-col justify-center items-center w-full items-center p-28">
-                            <div class="flex flex-row border-b-2 border-white w-full">
+                            <div class="flex flex-row border-b-2 border-white w-full mt-8">
                                 <div class="block w-1/2">
                                     <p class="line text-teal-400 text-6xl">-</p>
                                     <h1 CLASS="text-4xl mb-8">Bring your Vision to Light</h1>
@@ -201,7 +205,7 @@
                                 </div>
                             </div>
                             <div class="w-full flex flex-row justify">
-                                <div class="w-1/2 flex justify-between items-start mt-8 mr-20">
+                                <div class="w-1/2 flex justify-between items-start mt-8 mr-20 mb-16">
                                     <div class="block">
                                         <p>Monday - Thursday</p>
                                         <p>8:00 - 5:00</p>
@@ -219,14 +223,14 @@
                                 </div>
                                 <div class="block w-1/2 ">
                                     <div class="flex justify-between items-start mt-8 ml-20">
-                                        <button>About</button>
-                                        <button>Products</button>
-                                        <button>Our Portfolio</button>
-                                        <button>Careers</button>
-                                        <button>Contact Us</button>
+                                        <button class="footer-btn rounded-full p-4">About</button>
+                                        <button class="footer-btn rounded-full p-4">Products</button>
+                                        <button class="footer-btn rounded-full p-4">Our Portfolio</button>
+                                        <button class="footer-btn rounded-full p-4">Careers</button>
+                                        <button class="footer-btn rounded-full p-4">Contact Us</button>
                                     </div>
-                                    <div class="flex justify-end items-end mt-10">
-                                        <div class="flex justify-between">
+                                    <div class="flex justify-end items-end mt-2">
+                                        <div class="flex justify-between mb-8">
                                             <button><i class="fa-brands fa-linkedin mr-5"></i></button>
                                             <button><i class="fa-brands fa-facebook-f mr-5"></i></button>
                                             <button><i class="fa-brands fa-instagram mr-5"></i></button>
@@ -259,7 +263,7 @@
     $('.materialboxed').materialbox();
   });
     </script>
-    <script src="../index.js"></script>
+    <script src="./index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/f62a5baa39.js" crossorigin="anonymous"></script>
