--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
 <body class="text-black-100">
     <div class=""> <!-- content wrapper-->
         <div class="" >
-            <nav class=" bg-white flex flex-row columns-2 justify-between items-center ">
+            <nav class=" bg-white flex flex-row columns-2 justify-between items-center fixed z-50">
                 <div class="ml-20 w-1/5">
-                    <a href="/"><img  class="object-scale-down"id="logo" src="./assets/images/logo/Perkins-Everitt-Horizontal-Logo-RGB-Black copy.svg" /></a>
+                    <a href="#top"><img  class="object-scale-down"id="logo" src="./assets/images/logo/Perkins-Everitt-Horizontal-Logo-RGB-Black copy.svg" /></a>
                 </div>
                 <div class="flex w-1/2 items-center">
                     <ul class="flex flex-row justify-around w-full text-black">
