--- a/public/index.html
+++ b/public/index.html
@@ -25,19 +25,19 @@
                 <div class="flex w-1/2 items-center">
                     <ul class="flex flex-row justify-around w-full text-black">
                         <li class="nav-list-item">
-                            <button class="rounded-full"><span>ABOUT US</span></button>
+                            <a href=""class="text-black"><span>ABOUT US</span></a>
                         </li>
                         <li class="nav-list-item">
-                            <button class="rounded-full"><span>PRODUCTS</span></button>
+                            <a href=""class="text-black"><span>PRODUCTS</span></a>
                         </li>
                         <li class="nav-list-item">
-                            <button class="rounded-full"><span>OUR PORTFOLIO</span></button>
+                            <a href=""class="text-black"><span>OUR PORTFOLIO</span></a>
                         </li>
                         <li class="nav-list-item"> 
-                            <button class="rounded-full"><span>CAREERS</span></button>
+                            <a href=""class="text-black"><span>CAREERS</span></a>
                         </li>
                         <li class="nav-list-item">
-                            <button class="rounded-full"><span>CONTACT US</span></button>
+                            <a href=""class="text-black"><span>CONTACT US</span></a>
                         </li>
                     </ul>
                 </div>
@@ -222,12 +222,12 @@
                                     </div>
                                 </div>
                                 <div class="block w-1/2 ">
-                                    <div class="flex justify-between items-start mt-8 ml-20">
-                                        <button class="footer-btn rounded-full p-4">About</button>
-                                        <button class="footer-btn rounded-full p-4">Products</button>
-                                        <button class="footer-btn rounded-full p-4">Our Portfolio</button>
-                                        <button class="footer-btn rounded-full p-4">Careers</button>
-                                        <button class="footer-btn rounded-full p-4">Contact Us</button>
+                                    <div class="flex justify-between items-start mt-4 ml-10">
+                                        <a href="" class="footer-btn p-4">About</a href="">
+                                        <a href="" class="footer-btn p-4">Products</a href="">
+                                        <a href="" class="footer-btn p-4">Our Portfolio</a href="">
+                                        <a href="" class="footer-btn p-4">Careers</a href="">
+                                        <a href="" class="footer-btn p-4">Contact Us</a href="">
                                     </div>
                                     <div class="flex justify-end items-end mt-2">
                                         <div class="flex justify-between mb-8">
