--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                 <div class="ml-20 w-1/5">
                     <a href="#top"><img  class="object-scale-down"id="logo" src="./assets/images/logo/Perkins-Everitt-Horizontal-Logo-RGB-Black copy.svg" /></a>
                 </div>
-                <div class="flex w-1/2 items-center">
+                <div class="flex md:w-full lg:w-1/2 items-center">
                     <ul class="flex flex-row justify-around w-full text-black">
                         <li class="nav-list-item">
                             <a href=""class="text-black"><span>ABOUT US</span></a>
@@ -63,7 +63,7 @@
                             <div class="rotate-90 flex justify-items-end">
                             </div>
                         </div>
-                        <div class=" flex flex-col w-1/2">
+                        <div class=" flex flex-col lg:w-1/2 sm:w-full mx-auto">
                             <img class="max-h-96 top-24 right-48 z-10 absolute"src="./assets/images/uneebo-office-design-RnmWQkwtFuE-unsplash.jpg" alt="office">
                         </div>
     
